src/test/deca/codegen/invalid/extension/CreateSubArray.deca
{
	int[][] mat = new int[4][5];
	
	mat[0] = { 1, 2, 3, 4, 5};

}